bug fixes for input bar on mobile

--- a/styles.css
+++ b/styles.css
@@ -9,29 +9,34 @@
 /* Setting base font size for the body for rem calculations */
 body {
 	font-size: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 /* Container styling for full width and height, with a gradient background */
 .container {
 	width: 100%;
+	height: 100%;
+	min-width: 100%;
 	min-height: 100vh;
-	background: linear-gradient(135deg, #153677, #4e085f);
-	padding: 2%;
+	background: linear-gradient(135deg, #410070cf, #1b161c);
+	padding: 3%;
+	margin: 0;
 }
 
 /* Styling the to-do app box with max width, centering, padding, and border radius */
 .todo-app {
 	width: 90%;
-	max-width: 540px;
-	background: white;
-	margin: 5% auto 2%;
-	padding: 5% 4% 10%;
-	border-radius: 10px;
+	max-width: 100%;
+	background-color:rgba(196, 196, 196, 0.475);
+	margin: 3% auto 3%;
+	padding: 3%;
+	border-radius: 3%;
 }
 
 /* Styling for the main header including color and margin */
 .todo-app h2 {
-	color: #002765;
+	color: #3e444d;
 	display: flex;
 	align-items: center;
 	margin-bottom: 5%;
@@ -48,19 +53,25 @@ body {
 /* Row styling for the input and button with flex display, background, and padding */
 .row {
 	display: flex;
+	flex-direction: row;
 	align-items: center;
+	width: 65%;
+	max-width: 70%;
+	min-width: 65%;
 	justify-content: space-between;
 	background: #edeef0;
-	border-radius: 30px;
-	padding: 2% 5%;
-	margin-bottom: 5%;
+	border: solid 1px rgba(128, 128, 128, 0.368);
+	margin: 2% auto ;
+	padding: 0;
 }
 
 /* Input field styling within the row */
 input {
 	flex: 1;
-	border: none;
+	border: solid black 1px;
+	width: 100%;
 	outline: none;
+	margin: 0;
 	background: transparent;
 	padding: 2%;
 	font-size: 1rem;
@@ -68,7 +79,9 @@ input {
 
 /* Button styling within the row */
 button {
+	flex: 2;
 	border: none;
+	z-index: 10;
 	outline: none;
 	padding: 3% 10%;
 	background: #ff5945;
